# CPS_preparation_tasks

./: .gitignore  README.md  pyproject.toml  report.md
learned_policies/: policy_params.msgpack  readme.md
preparation/: q_table.npy
preparation/learned_policies/: policy_params.msgpack  q_table.npy
preparation/task1/: demo.py
preparation/task2/: evaluate.py
project/: acro_excite.py  acro_step.bin.json  acro_step_runtime.py  checkpoints.py  drone_race_env.py  eval.py  eval_agent.py  eval_and_log.py  flytrack_eval_trajectory_0.npy  mlflow.db  model.py  network.py  plot_density.py  report.md  rerun_viz.py  rollout.rrd  rollout_200M.rrd  rollout_best.rrd  train_ppo.py  utils.py  wrappers.py
project/assets/: rollout_100M.rrd  rollout_200M.rrd  rollout_250M.rrd  rollout_300M.rrd
project/mlruns/1/30f9f5100d40415da060987c86f91ec5/artifacts/: rollout.rrd
project/mlruns/1/4b7cb15b906649beafde77dd145ae565/artifacts/: rollout.rrd
project/mlruns/1/74987ef48d4c493abb54c9487ac29532/artifacts/: rollout.rrd
project/mlruns/1/ppo_drone_2/artifacts/: rollout.rrd
project/mlruns/2/28a4b8f912a840c29984db81e2e81ffe/artifacts/: rollout.rrd
task1/: demo.py  gridworld.py
task2/: gridworld.py  q_learn.py  q_table.npy
task3/: evaluate.py  evlauate.py  gridworld.py  reinforce.py
