[project]
name = "cps-project-preparation"
version = "0.1.0"
description = "SF CPS 2025 - Practical Part (GridWorld, Q-Learning, REINFORCE)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.1",
    "jax[cpu]>=0.8.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "optax>=0.2.6",
]
